gen/CANNParser.java
// Generated from C:/Users/joens/source/repos/p4\CANN.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CANNParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, IMPORT=20, REAL_NUMERAL=21, INTEGER_NUMERAL=22, SIMPLE_TYPE=23, 
		R=24, Z=25, N=26, BOOL=27, MTRX=28, VEC=29, STRING=30, BOOL_VALUE=31, 
		STRING_VALUE=32, ID=33, LINE_COMMENT=34, COMPAREOP=35, EQUALS=36, LOGIC_OP=37, 
		NOT=38, DOT=39, LEFTBRACKET=40, RIGHTBRACKET=41, LEFTCURLY=42, RIGHTCURLY=43, 
		LEFTPAREN=44, RIGHTPAREN=45, COMMA=46, WHITESPACE=47, LESS_THAN=48, LESS_THAN_OR_EQUALS=49, 
		GREATER_THAN=50, GREATER_THAN_OR_EQUALS=51, NOT_EQUALS=52, COLON=53, DOUBLECOLON=54, 
		ACTIVATION_FUNC=55;
	public static final int
		RULE_prog = 0, RULE_stmts = 1, RULE_identifier = 2, RULE_stmt = 3, RULE_declaration = 4, 
		RULE_variabledeclaration = 5, RULE_assignment = 6, RULE_expression = 7, 
		RULE_boolean_expr = 8, RULE_arithmetic_expr = 9, RULE_vector_expr = 10, 
		RULE_vector_val = 11, RULE_nnDimensions = 12, RULE_nndeclaration = 13, 
		RULE_datadeclaration = 14, RULE_vectordeclaration = 15, RULE_matrixdeclaration = 16, 
		RULE_matrx_val = 17, RULE_functionCall = 18, RULE_trainFunction = 19, 
		RULE_testFunction = 20, RULE_importFunction = 21, RULE_exportFunction = 22, 
		RULE_nn = 23, RULE_epoch = 24, RULE_learning_rate = 25, RULE_input = 26, 
		RULE_output = 27, RULE_mathFunctions = 28, RULE_matrix_function = 29, 
		RULE_vector_function = 30, RULE_num = 31, RULE_value = 32, RULE_control_structure = 33, 
		RULE_type = 34, RULE_vectornumeral = 35, RULE_realnumeral = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stmts", "identifier", "stmt", "declaration", "variabledeclaration", 
			"assignment", "expression", "boolean_expr", "arithmetic_expr", "vector_expr", 
			"vector_val", "nnDimensions", "nndeclaration", "datadeclaration", "vectordeclaration", 
			"matrixdeclaration", "matrx_val", "functionCall", "trainFunction", "testFunction", 
			"importFunction", "exportFunction", "nn", "epoch", "learning_rate", "input", 
			"output", "mathFunctions", "matrix_function", "vector_function", "num", 
			"value", "control_structure", "type", "vectornumeral", "realnumeral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'-'", "'*'", "'/'", "'+'", "'hada'", "'neunet'", "'loadData'", 
			"'train'", "'test'", "'export'", "'Dimensions'", "'Transpose'", "'Size'", 
			"'if'", "'while'", "'loop'", "'from'", "'to'", "'import'", null, null, 
			null, "'real'", "'int'", "'nat'", "'bool'", "'mtrx'", "'vec'", "'string'", 
			null, null, null, null, "'=='", "':='", null, "'!'", "'.'", "'['", "']'", 
			"'{'", "'}'", "'('", "')'", "','", null, "'<'", "'<='", "'>'", "'>='", 
			"'!='", "':'", "'::'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "IMPORT", "REAL_NUMERAL", 
			"INTEGER_NUMERAL", "SIMPLE_TYPE", "R", "Z", "N", "BOOL", "MTRX", "VEC", 
			"STRING", "BOOL_VALUE", "STRING_VALUE", "ID", "LINE_COMMENT", "COMPAREOP", 
			"EQUALS", "LOGIC_OP", "NOT", "DOT", "LEFTBRACKET", "RIGHTBRACKET", "LEFTCURLY", 
			"RIGHTCURLY", "LEFTPAREN", "RIGHTPAREN", "COMMA", "WHITESPACE", "LESS_THAN", 
			"LESS_THAN_OR_EQUALS", "GREATER_THAN", "GREATER_THAN_OR_EQUALS", "NOT_EQUALS", 
			"COLON", "DOUBLECOLON", "ACTIVATION_FUNC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CANN.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CANNParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CANNParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			stmts();
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtsContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterStmts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitStmts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitStmts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << REAL_NUMERAL) | (1L << INTEGER_NUMERAL) | (1L << SIMPLE_TYPE) | (1L << MTRX) | (1L << VEC) | (1L << BOOL_VALUE) | (1L << ID) | (1L << NOT) | (1L << LEFTBRACKET) | (1L << LEFTPAREN))) != 0)) {
				{
				{
				setState(77);
				stmt();
				setState(78);
				match(T__0);
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
	 
		public IdentifierContext() { }
		public void copyFrom(IdentifierContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IdentifierProductionContext extends IdentifierContext {
		public TerminalNode ID() { return getToken(CANNParser.ID, 0); }
		public IdentifierProductionContext(IdentifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterIdentifierProduction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitIdentifierProduction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitIdentifierProduction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifier);
		try {
			_localctx = new IdentifierProductionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprStmtContext extends StmtContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExprStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterExprStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitExprStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitExprStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionCallStmtContext extends StmtContext {
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public FunctionCallStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterFunctionCallStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitFunctionCallStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitFunctionCallStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CtrlStmtContext extends StmtContext {
		public Control_structureContext control_structure() {
			return getRuleContext(Control_structureContext.class,0);
		}
		public CtrlStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterCtrlStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitCtrlStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitCtrlStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssStmtContext extends StmtContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AssStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterAssStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitAssStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitAssStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DclStmtContext extends StmtContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public DclStmtContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterDclStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitDclStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitDclStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new DclStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				declaration();
				}
				break;
			case 2:
				_localctx = new AssStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				assignment();
				}
				break;
			case 3:
				_localctx = new ExprStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				expression();
				}
				break;
			case 4:
				_localctx = new CtrlStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				control_structure();
				}
				break;
			case 5:
				_localctx = new FunctionCallStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				functionCall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MtrxDeclContext extends DeclarationContext {
		public MatrixdeclarationContext matrixdeclaration() {
			return getRuleContext(MatrixdeclarationContext.class,0);
		}
		public MtrxDeclContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterMtrxDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitMtrxDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitMtrxDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VecDeclContext extends DeclarationContext {
		public VectordeclarationContext vectordeclaration() {
			return getRuleContext(VectordeclarationContext.class,0);
		}
		public VecDeclContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterVecDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitVecDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitVecDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarialbeDeclContext extends DeclarationContext {
		public VariabledeclarationContext variabledeclaration() {
			return getRuleContext(VariabledeclarationContext.class,0);
		}
		public VarialbeDeclContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterVarialbeDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitVarialbeDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitVarialbeDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NnDeclContext extends DeclarationContext {
		public NndeclarationContext nndeclaration() {
			return getRuleContext(NndeclarationContext.class,0);
		}
		public NnDeclContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterNnDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitNnDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitNnDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DataDeclContext extends DeclarationContext {
		public DatadeclarationContext datadeclaration() {
			return getRuleContext(DatadeclarationContext.class,0);
		}
		public DataDeclContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).enterDataDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CANNListener ) ((CANNListener)listener).exitDataDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CANNVisitor ) return ((CANNVisitor<? extends T>)visitor).visitDataDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SIMPLE_TYPE:
				_localctx = new VarialbeDeclContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				variabledeclaration();
				}
				break;
			case T__6:
				_localctx = new NnDeclContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				nndeclaration();
				}
				break;
			case T__7:
				_localctx = new DataDeclContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				datadeclaration();
				}
				break;
			case VEC:
				_localctx = new VecDeclContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				vectordeclaration();
				}
				break;
			case MTRX:
				_localctx = new MtrxDeclContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(98);
				matrixdeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
